--- a/css/styles.css
+++ b/css/styles.css
@@ -3,7 +3,7 @@
 
 body,td,th,p{
 	font-family: Arial, Helvetica, sans-serif;
-	font-size: 10pt;
+	font-size: 10px;
 	color: #333;
 	line-height: 1.5;
 }
@@ -14,7 +14,7 @@ body {
 }
 ul, li {
 	font-family: Arial, Helvetica, sans-serif;
-	font-size: 10pt;
+	font-size: 1rem;
 	color: #333;
 }
 a {
@@ -42,7 +42,7 @@ article, aside, canvas, details, figcaption, figure, footer, header, hgroup, men
 #footer {
   background-color: #444;
   color: #aaa;
-  font-size: 8pt;
+  font-size: 10p;
   letter-spacing: 1px;
   padding: 25px;
   text-align: center;
@@ -54,9 +54,14 @@ nav {
   height: 80px;
   background-color: #252831;
   text-align:center;
+  display:flex;
+  align-items: center;
+  justify-content: center;
+
 }
 nav h1 {
   margin: auto;
+
 }
 nav h1 a {
   color: #fff;
@@ -108,6 +113,7 @@ nav h1 a {
   width: 100%;
   height: 50px;
   background-color: #3397DB;
+  display: flex;
   align-items: center;
 }
 .filter-options h2 {
@@ -126,7 +132,7 @@ nav h1 a {
   letter-spacing: 0;
   margin: 10px;
   padding: 0 10px;
-  width: 200px;
+  width: 50%;
 }
 
 /* ====================== Restaurant Listing ====================== */
@@ -136,6 +142,11 @@ nav h1 a {
   margin: 0;
   padding: 30px 15px 60px;
   text-align: center;
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: center;
+
+
 }
 #restaurants-list li {
   background-color: #fff;
@@ -145,7 +156,7 @@ nav h1 a {
   min-height: 380px;
   padding: 0 30px 25px;
   text-align: left;
-  width: 270px;
+  min-width: 270px;
 }
 #restaurants-list .restaurant-img {
   background-color: #ccc;
