--- a/css/styles.css
+++ b/css/styles.css
@@ -196,7 +196,6 @@ nav h1 a {
   border: 2px solid #ccc;
   font-family: Arial, sans-serif;
   margin: 15px;
-  min-height: 380px;
   padding: 0 30px 25px;
   text-align: left;
   min-width: 270px;
@@ -207,7 +206,6 @@ nav h1 a {
   display: block;
   margin: 0;
   max-width: 100%;
-  min-height: 248px;
   min-width: 100%;
 }
 
@@ -348,61 +346,12 @@ nav h1 a {
   color: #666;
 }
 
-@media (min-width:350px) {
-  nav {
-    height: 10vh;
+@media (min-width:150px) {
+  #restaurants-list li {
+   min-width: 80%;
   }
-  nav h1 a {
-    font-size: 2.5rem;
-  }
-  #map {
-    height: 80vh;
-  }
-  .filter-options {
-    height: 10vh;
-  }
-  .filter-options h2 {
-    font-size: 3rem;
-  }
-  .leaflet-touch .leaflet-control-layers, .leaflet-touch .leaflet-bar {
-    border: none;
-  }
-  .leaflet-touch .leaflet-bar a {
-    width: 100px;
-    height: 100px;
-    font-size: 4rem;
-    line-height: 3rem;
-    margin-bottom: 2rem;
-    margin-left: 2.5rem;
-    margin-top: 2.5rem;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-  }
+  #restaurants-list .restaurant-img {
 
-  .leaflet-marker-pane img {
-    width: 50px;
-    height: 81px;
-  }
-  .filter-options select {
-    height: 6rem;
-    font-size: 2.5rem;
-    margin-right: 1rem;
-  }
-  #restaurants-list li a {
-    height: 80px;
-    width: 300px;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    font-size: 2.5rem;
-  }
-  #footer {
-    height: 10vh;
-    font-size: 2rem;
-    padding-top: 4rem;
-  }
-  .inside #map {
-    position: fixed;
   }
 }
+
