--- a/css/styles.css
+++ b/css/styles.css
@@ -83,7 +83,7 @@ section {
 
 nav {
   width: 100%;
-  height: 80px;
+  height: 12vh;
   background-color: #252831;
   text-align: center;
   display: flex;
@@ -143,7 +143,7 @@ nav h1 a {
 /* ====================== Map ====================== */
 
 #map {
-  height: 400px;
+  height: 80vh;
   width: 100%;
   background-color: #ccc;
 }
@@ -152,7 +152,7 @@ nav h1 a {
 
 .filter-options {
   width: 100%;
-  height: 50px;
+  height: 8vh;
   background-color: #3397DB;
   display: flex;
   align-items: center;
@@ -350,8 +350,6 @@ nav h1 a {
   #restaurants-list li {
    min-width: 80%;
   }
-  #restaurants-list .restaurant-img {
 
-  }
 }
 
