--- a/css/styles.css
+++ b/css/styles.css
@@ -356,7 +356,8 @@ nav h1 a {
   nav h1 a {
     font-size: 3em;
   }
-  .leaflet-touch .leaflet-control-layers, .leaflet-touch .leaflet-bar {
+  .leaflet-touch .leaflet-control-layers,
+  .leaflet-touch .leaflet-bar {
     margin: 20px;
   }
   .leaflet-touch .leaflet-bar a {
@@ -368,7 +369,7 @@ nav h1 a {
     font-size: 5em;
   }
   .filter-options {
-    display:flex;
+    display: flex;
     flex-direction: row;
   }
   .filter-options h2 {
@@ -391,12 +392,7 @@ nav h1 a {
     font-size: 3em;
     padding: 40px;
   }
+  .inside #map {
+    position: relative;
+  }
 }
-
-/*
-position: fixed;
-z-index: 100;
-top: 0;
-right: 0;
-bottom: 0;
-left: 0; */
