--- a/css/styles.css
+++ b/css/styles.css
@@ -305,7 +305,7 @@ nav h1 a {
 #reviews-container {
   border-bottom: 1px solid #d9d9d9;
   border-top: 1px solid #fff;
-  padding: 140px 40px 30px;
+  padding: 98px 17px 30px;
   width: 50%;
 }
 
@@ -368,29 +368,16 @@ nav h1 a {
     width: 100%;
     position: relative;
   }
+  #breadcrumb {
+    display: none;
+  }
   #restaurant-name {
-    font-size: 5em;
+    font-size: 1.3rem;
+  }
+  #reviews-container h2 {
+    font-size: 1.3rem;
   }
   .inside #footer {
     width: 100%;
-    height: 5vh;
-    font-size: 2rem;
-  }
-  #restaurant-hours td {
-    font-size: 2.2rem;
-  }
-  #reviews-list li p:first-child {
-    font-weight: bold;
-    font-size: 1.5rem;
-  }
-  #reviews-list li p:nth-child(2) {
-    font-size: 1.3rem;
-  }
-  #reviews-list li p:nth-child(3) {
-    font-size: 1.1rem;
-    color: red;
-  }
-  #reviews-list li p:nth-child(4) {
-    font-size: 1rem;
   }
 }
