--- a/css/styles.css
+++ b/css/styles.css
@@ -1,6 +1,8 @@
 @charset "utf-8";
 /* CSS Document */
-* {
+*,
+*::before,
+*::after {
   box-sizing: border-box;
 }
 body,
@@ -357,7 +359,7 @@ nav h1 a {
   color: #666;
 }
 
-@media (min-width:320px) {
+@media (max-width:800px) {
   nav h1 a {
     font-size: 1.2rem;
   }
@@ -390,5 +392,60 @@ nav h1 a {
   }
   .inside #footer {
     width: 100%;
+  }
+  #restaurant-hours td {
+    font-size: .7rem;
+  }
+  #reviews-container h2 {
+    margin-left: 1rem;
+  }
+  #reviews-list p:nth-child(1) {
+    font-size: 1rem;
+    margin-top: .3rem;
+    font-weight: bold;
+  }
+  #reviews-list p:nth-child(2){
+    font-size: 1rem;
+
+  }
+  #reviews-list p:nth-child(3) {
+    font-size: 1rem;
+    color: red;
+
+  }
+
+  #reviews-list p:nth-child(4) {
+    font-size: .8rem;
+  }
+}
+@media (min-width:801px) {
+  nav h1 a {
+    font-size: 1.5rem;
+  }
+
+  #restaurant-container, #reviews-container {
+    padding-top: 200px;
+  }
+
+  #restaurant-hours td {
+    font-size: 1rem;
+  }
+  #reviews-list p:nth-child(1) {
+    font-size: 1rem;
+    margin-top: .3rem;
+    font-weight: bold;
+  }
+  #reviews-list p:nth-child(2){
+    font-size: 1rem;
+
+  }
+  #reviews-list p:nth-child(3) {
+    font-size: 1rem;
+    color: red;
+
+  }
+
+  #reviews-list p:nth-child(4) {
+    font-size: .8rem;
   }
 }
